Fix alignment of apps menu when no apps are installed

--- a/app/stylesheets/shell-window/apps-menu-dropdown.less
+++ b/app/stylesheets/shell-window/apps-menu-dropdown.less
@@ -8,6 +8,11 @@
     width: 186px;
   }
 
+  em {
+    display: block;
+    padding: 15px;
+  }
+
   // grid view
   .apps-grid {
     display: grid;
